# playwright-endtoend

./: README.md  config.py  conftest.py  pyproject.toml  pytest.ini  test_main.py
allure-report/: index.html
allure-report/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: duration-trend.json  history.json
allure-report/widgets/: retry-trend.json  severity.json  status-chart.json  summary.json
pages/: checkout_page.py  home_page.py  login_page.py  logout_page.py  my_account_page.py  product_page.py  registration_page.py
reports/: myreports.html
reports/allure-results/: 005f3c8d-9539-4dca-ab93-f7b2ad3c73c0-result.json  043cbf5f-2d07-4513-bb59-dbdf5493fb08-attachment.txt  078df7ea-a9a1-49ec-b6b3-ca2b0081ff91-container.json  08027f6a-808c-40db-9077-7c1474732be6-container.json  085b7c88-fd7e-4ede-a0c8-c8a4c37597cd-container.json  08a2ae84-dfe6-4e9c-9aa2-64635c75ee70-container.json  08d89ed9-8d90-43c0-be02-18874fed8a9e-container.json  08f69866-052a-4615-b20c-16e2befbe2e0-container.json  09360cd7-87f9-4900-9fc4-a3ebd12408a5-container.json  09b0f5da-21d6-4dea-9150-968fa37ef8bb-container.json  0a4e8b66-0f3d-4418-b4b6-e139adede677-container.json  0adcf9ce-cdbc-4985-ba7c-1baf05b1fb49-container.json  0ae61025-b1b9-4d2e-af37-be87d3df49a7-container.json  (+422 more)
tests/: test_add_product_to_cart.py  test_end_to_end.py  test_login.py  test_login_data_driven.py  test_product_search.py  test_user_logout.py  test_user_registration.py
(+83 files in other folders)
